--- a/components/login/build.gradle
+++ b/components/login/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'bundle-module'
+//apply plugin: 'bundle-module'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/bundle_module.gradle"
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
