--- a/components/myhome/build.gradle
+++ b/components/myhome/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'bundle-module'
+//apply plugin: 'bundle-module'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/bundle_module.gradle"
 kapt {
     arguments {
         arg("AROUTER_MODULE_NAME", project.getName())
@@ -31,7 +32,8 @@ android {
     }
 }
 dependencies {
-    lintChecks project(path: ':lint-rules')
+//    lintChecks project(path: ':lint-rules')
+    implementation project(path: ':framework:loader')
 }
 apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/check_dangerous_api.gradle"
 checker {
