--- a/framework/common/build.gradle
+++ b/framework/common/build.gradle
@@ -4,8 +4,8 @@ ext.srcDirs = [
         "serialization",
         "apm",
 ]
-apply plugin: 'foundation-module'
-
+//apply plugin: 'foundation-module'
+//apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/foundation_module.gradle"
 android {
     defaultConfig {
         externalNativeBuild {
@@ -37,6 +37,42 @@ android {
 //        pickFirst 'lib/x86/libhawks.so'
 ////        pickFirst 'lib/mips/libRSSupport.so'
 //    }
+    sourceSets {
+        if (project.hasProperty("srcDirs")) {
+            main {
+                java.excludes = [
+                        '**/build/**',
+                ]
+                project.ext.srcDirs.forEach {
+                    assets.srcDirs += "$projectDir/$it/main/assets"
+                    aidl.srcDirs += "$projectDir/$it/main/aidl"
+                    res.srcDirs += "$projectDir/$it/main/res-frame-animation"
+                    res.srcDirs += "$projectDir/$it/main/res"
+                    java.srcDirs += "$projectDir/$it/main/java"
+
+//                    assets.srcDirs += "$projectDir/src/inhouse/assets"
+//                    aidl.srcDirs += "$projectDir/src/inhouse/aidl"
+//                    res.srcDirs += "$projectDir/src/inhouse/res"
+//                    java.srcDirs += "$projectDir/src/inhouse/java"
+                }
+            }
+            androidTest {
+                project.ext.srcDirs.forEach {
+                    assets.srcDirs += "$projectDir/$it/androidTest/assets"
+                    aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
+                    res.srcDirs += "$projectDir/$it/androidTest/res"
+                    java.srcDirs += "$projectDir/$it/androidTest/java"
+
+                }
+            }
+            test {
+                project.ext.srcDirs.forEach {
+                    java.srcDirs += "$projectDir/$it/test/java"
+                }
+
+            }
+        }
+    }
 }
 
 dependencies {
@@ -177,7 +213,7 @@ dependencies {
     api group: "com.tencent.matrix", name: "matrix-io-canary", version: "0.6.0", changing: true
     api group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk", version: "0.6.0", changing: true
 //    releaseApi group: "com.tencent.matrix", name: "matrix-sqlite-lint-android-sdk-no-op", version: "0.6.0", changing: true
-    implementation project(path: ':lint-checker')
+//    implementation project(path: ':lint-checker')
 //    lintPublish project(path: ':lint-rules')
     /**
      * ===============================monitor end=============================
