--- a/framework/image/build.gradle
+++ b/framework/image/build.gradle
@@ -8,9 +8,8 @@ ext.srcDirs = [
 //        "scrollExprimental",
 
 ]
-apply plugin: 'foundation-module'
-
-
+//apply plugin: 'foundation-module'
+//apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/foundation_module.gradle"
 android {
     defaultConfig {
         externalNativeBuild {
@@ -31,10 +30,46 @@ android {
             //path 'src/main/cpp/CMakeLists.txt'
         }
     }
+    sourceSets {
+        if (project.hasProperty("srcDirs")) {
+            main {
+                java.excludes = [
+                        '**/build/**',
+                ]
+                project.ext.srcDirs.forEach {
+                    assets.srcDirs += "$projectDir/$it/main/assets"
+                    aidl.srcDirs += "$projectDir/$it/main/aidl"
+                    res.srcDirs += "$projectDir/$it/main/res-frame-animation"
+                    res.srcDirs += "$projectDir/$it/main/res"
+                    java.srcDirs += "$projectDir/$it/main/java"
+
+//                    assets.srcDirs += "$projectDir/src/inhouse/assets"
+//                    aidl.srcDirs += "$projectDir/src/inhouse/aidl"
+//                    res.srcDirs += "$projectDir/src/inhouse/res"
+//                    java.srcDirs += "$projectDir/src/inhouse/java"
+                }
+            }
+            androidTest {
+                project.ext.srcDirs.forEach {
+                    assets.srcDirs += "$projectDir/$it/androidTest/assets"
+                    aidl.srcDirs += "$projectDir/$it/androidTest/aidl"
+                    res.srcDirs += "$projectDir/$it/androidTest/res"
+                    java.srcDirs += "$projectDir/$it/androidTest/java"
+
+                }
+            }
+            test {
+                project.ext.srcDirs.forEach {
+                    java.srcDirs += "$projectDir/$it/test/java"
+                }
+
+            }
+        }
+    }
 }
 
 dependencies {
-    api project(path: ':framework:common')
+//    api project(path: ':framework:common')
     /**
      * ===============================image start=============================
      */
@@ -55,4 +90,3 @@ dependencies {
      * ===============================image end=============================
      */
 }
-
