--- a/components/hotel-module/bundle1/build.gradle
+++ b/components/hotel-module/bundle1/build.gradle
@@ -1,19 +1,21 @@
-apply plugin: 'bundle-module'
-kapt {
-    arguments {
-        arg("AROUTER_MODULE_NAME", project.getName())
-    }
-}
-android {
-    defaultConfig {
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
-            }
-        }
-    }
-
-}
+//apply plugin: 'bundle-module'
+//apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/bundle_module.gradle"
+//kapt {
+//    arguments {
+//        arg("AROUTER_MODULE_NAME", project.getName())
+//    }
+//}
+//android {
+//    defaultConfig {
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = [AROUTER_MODULE_NAME: project.getName(), AROUTER_GENERATE_DOC: "enable"]
+//            }
+//        }
+//    }
+//
+//}
 dependencies {
-    implementation project(path: ':components:hotel-module:foundation')
+//    implementation project(path: ':components:hotel-module:foundation')
+    api "com.jamesfchen:hotel-foundation:1.0"
 }
