--- a/components/template/build.gradle
+++ b/components/template/build.gradle
@@ -1,4 +1,5 @@
-apply plugin: 'bundle-module'
+//apply plugin: 'bundle-module'
+apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/bundle_module.gradle"
 apply plugin: 'com.jamesfchen.perfplugin'
 
 dependencies {
