--- a/framework/chatroom/build.gradle
+++ b/framework/chatroom/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'foundation-module'
-
+//apply plugin: 'foundation-module'
+//apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/foundation_module.gradle"
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(path: ':framework::common')
