--- a/framework/map/build.gradle
+++ b/framework/map/build.gradle
@@ -1,5 +1,5 @@
-apply plugin: 'foundation-module'
-
+//apply plugin: 'foundation-module'
+//apply from: "${rootProject.getRootDir().getAbsolutePath()}/script/foundation_module.gradle"
 android {
     defaultConfig {
         ndk {
@@ -9,8 +9,8 @@ android {
     }
 }
 dependencies {
-    implementation project(path: ':framework::common')
-    api project(path: ':framework:uicomponent')
+//    implementation project(path: ':framework::common')
+//    api project(path: ':framework:uicomponent')
     api 'com.amap.api:location:4.7.2'
     api 'com.amap.api:search:6.9.2'
     api 'com.amap.api:3dmap:6.9.4'
