--- a/script/bundle_module.gradle
+++ b/script/bundle_module.gradle
@@ -51,12 +51,6 @@ android {
 //                viewBinding true
 //            }
 
-    buildTypes {
-        component{
-            initWith debug
-            debuggable true
-        }
-    }
 }
 
 dependencies {
@@ -69,7 +63,7 @@ dependencies {
     P.teenager("bundles end ========================================================================================")
     kapt "com.google.dagger:dagger-compiler:2.16"
     annotationProcessor "com.google.dagger:dagger-android-processor:2.16"
-    annotationProcessor 'androidx.databinding:databinding-compiler:4.1.0-alpha01'
+    annotationProcessor 'androidx.databinding:databinding-compiler:7.0.0-beta03'
     annotationProcessor 'com.alibaba:arouter-compiler:1.2.1'
 }
 
