--- a/buildSrc/build.gradle
+++ b/buildSrc/build.gradle
@@ -1,10 +1,15 @@
 buildscript {
     repositories {
+        maven { url "https://jitpack.io" }
+        maven { url "https://maven.oschina.net/content/groups/public/" }
+        maven { url 'https://plugins.gradle.org/m2/' }
+        maven { url 'https://maven.aliyun.com/repository/google/' }
         mavenLocal()
         mavenCentral()
-        google()
+//        google()
     }
 }
+
 plugins {
     id 'groovy-gradle-plugin'
 }
@@ -30,6 +35,7 @@ sourceSets {
         }
     }
 }
+
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
